FEATURE: Core | Reconnect to peers after unexpected disconnect / recover stats of recently disconnected peers [Parg,The 8472]
FEATURE: UI   | Piece distribution view is now also available as a peer subview [The 8472]
FEATURE: UI   | Added 'time remaining' column to peers view [Parg]

CHANGE: Core  | Revised piece picking code to deal better with some edge cases and snubbed peers [The 8472]
CHANGE: Core  | Attempt to re-open a file when access fails to try and recover from a transient error [Parg]
CHANGE: Core  | Auto speed default is now the beta algorithm [Parg]
CHANGE: Core  | Share Ratio/min Seeds ignore rule now applies even when no tracker scrape is available [The 8472]
CHANGE: UI    | Added private torrent indicator to the general tab [The 8472]

BUGFIX: UI    | Don't hang UI redraw if file access is slow [Parg]
BUGFIX: UI    | Fixed inconsistencies in the Torrent Open Dialog related to renaming and retargeting files and directories [The 8472]  


2007.10.04 | Azureus 3.0.3.4

FEATURE: UI   | Added "All Peers" view [amc1]

CHANGE: Core  | Added workarounds for some buggy UPnP router implementations [parg]
CHANGE: UI    | NAT status bar indicator and health icons now ignore UDP and LAN-local connections [The 8472]

BUGFIX: Core  | Fixed bug where a torrent's save location is "forgotten" when a recheck is done in some circumstances [amc1]
BUGFIX: UI    | times > 365 days (such as the uptime) are now displayed properly [The 8472]



2007.09.21 | Azureus 3.0.3.2

BUGFIX: Core  | Fixed MacOSX playback bug [TuxPaper]
BUGFIX: Core  | Fixed update restart bug [Parg]



2007.09.20 | Azureus 3.0.3.0

FEATURE: Core | Added experimental support for LibTorrent extension protocol handshake [amc1]
FEATURE: Core | Providing some experimental options for possible workarounds for a particular traffic shaping method
                 See http://www.azureuswiki.com/index.php/Avoid_traffic_shaping#Level_5 for further details 